--- a/lib/style.css
+++ b/lib/style.css
@@ -45,6 +45,13 @@ h3 {
     width: 100p;
 }
 
+.error {
+    align-items: center;
+    color: red;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+}
+
 @media screen and (max-width: 1200px) {
     .button_container {
         flex-direction: column;
