--- a/lib/style.css
+++ b/lib/style.css
@@ -36,21 +36,38 @@ h3 {
     color: whitesmoke;
     background-color: #5f6769;
     padding: 20px;
-    width: 20%;
 }
 
 .value_table {
     color: whitesmoke;
     font-family: Arial, Helvetica, sans-serif;
-    width: 100p;
+    width: 500px;
 }
 
-.error {
-    align-items: center;
-    color: red;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
-}
+.tableau {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    margin: auto;
+    background-color: white;
+  }
+  
+  .tableau td, .tableau th {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: center;
+  }
+  
+  .tableau tr:nth-child(even){background-color: #f2f2f2;}
+  
+  .tableau tr:hover {background-color: #ddd;}
+  
+  .tableau th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #4CAF50;
+    color: white;
+  }
 
 @media screen and (max-width: 1200px) {
     .button_container {
