--- a/lib/style.css
+++ b/lib/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #3c3d47;
+    background: #afa08b;
     margin: 0;
     padding: 0;
 }
@@ -23,6 +23,7 @@ h3 {
     flex-direction: row;
     width: 100%;
 }
+
 
 .button_container {
     display: flex;
@@ -48,18 +49,19 @@ h3 {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     margin: auto;
-    background-color: white;
+    border: 3px solid black;
+    background-color: #afa08b;
   }
   
   .tableau td, .tableau th {
-    border: 1px solid #ddd;
+    border: 1px solid #83725a;
     padding: 8px;
     text-align: center;
   }
   
-  .tableau tr:nth-child(even){background-color: #f2f2f2;}
+  .tableau tr:nth-child(even){background-color: #83725a;}
   
-  .tableau tr:hover {background-color: #ddd;}
+  .tableau tr:hover {background-color: #c07871;}
   
   .tableau th {
     padding-top: 12px;
@@ -68,6 +70,19 @@ h3 {
     background-color: #4CAF50;
     color: white;
   }
+
+.button_center{
+    display: flex;
+    justify-content:center;
+    margin:auto;
+}
+
+.total {
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-size: 24px;
+    color: cornsilk;
+}
 
 @media screen and (max-width: 1200px) {
     .button_container {
